# Secure-Login-Admin-API

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: database.py  main.py
app/auth/: dependencies.py  jwt_utils.py  oauth2_config.py  password_utils.py
app/crud/: auth_crud.py  user_crud.py
app/endpoints/: auth_endpoints.py  user_endpoints.py
app/middleware/: cors_config.py
app/models/: user_models.py
app/schemas/: config_schema.py  user_schemas.py
scripts/: create_admin.py
sql/: init_users.sql
