[tool.poetry]
package-mode = false
name = "securelogin_fastapi"
version = "0.1.0"
description = ""
authors = ["CamiloCod3"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "0.29.0"
psycopg2-binary = "2.9.9"
python-dotenv = "1.0.0"
SQLAlchemy = "2.0.23"
typing-extensions = "^4.12.2"  # Updated version to match pydantic requirements
pydantic-core = "2.18.1"       # Match a compatible core version
pydantic = ">=2.7.0,<3.0.0"    # Compatible pydantic version
uvicorn = "^0.24.0.post1"
fastapi = ">=0.115.3,<0.116.0" # Latest FastAPI version range
python-multipart = "^0.0.7"
passlib = "^1.7.4"
bcrypt = "4.0.1"
pydantic-settings = "^2.1.0"
email-validator = "^2.1.0.post1"
slowapi = "^0.1.9"
pyjwt = "2.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
